--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Books</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -207,9 +207,10 @@ Professor answered: “Yes!”
 At that moment he knew he had to pursue fiction.
 <br><br>
 But how? He asked himself?
-<br><br>
-***
-<br><br>
+<br><br>***</p>
+                </div>
+                <div class="col-lg-4">
+                    <p><br><br>
 He hired an elite consulting firm (no not McKinsey & Company) but something in that caliber.
 His meeting with three top consultants went something like this:
 Darius Susa came in and sat at the table.
@@ -229,20 +230,16 @@ There is also a fourth point, but we’re not sure.
 <br><br>
 Let’s say that it will greatly help if you lived for a year or two in a remote Russian city.
 We recommend Irkutsk or Samara.
-<br>
+<br><br>
 This last point is not a requirement but will greatly help your case.
-<br>
+<br><br>
 Darius Susa was silent for a along time.
-<br>
+<br><br>
 Consultants looked their watch. They know their time was valuable.
-<br>
+<br><br>
 They had hundreds of other clients to help.
-<br>
-They we getting nervous when Darius said “yes!” </p>
-                    </p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+<br><br>
+They we getting nervous when Darius said “yes!” <br><br> *** </p> 
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     
