--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@ They we getting nervous when Darius said “yes!” <br><br> *** </p>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!----------------------------------------- Footer -------------------------------------------------->
+      <!----------------------------------------- Footer -------------------------------------------------->
+      
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
@@ -313,16 +315,16 @@ They we getting nervous when Darius said “yes!” <br><br> *** </p>
                         <p>Harvard Square<br>Cambridge, MA 02138</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Social Media</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/darius.susa.5" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="darius_susa" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -333,8 +335,8 @@ They we getting nervous when Darius said “yes!” <br><br> *** </p>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>Bookstore</h3>
+                        <p><a href="#"> AmazonStart</a>.</p>
                     </div>
                 </div>
             </div>
@@ -343,7 +345,7 @@ They we getting nervous when Darius said “yes!” <br><br> *** </p>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; Darius Susa 2015
                     </div>
                 </div>
             </div>
@@ -357,7 +359,8 @@ They we getting nervous when Darius said “yes!” <br><br> *** </p>
         </a>
     </div>
 
-    <!-- Portfolio Modals -->
+    <!---------------------------- Portfolio Modals ------------------------------------------------------------->
+    <!---------------------------- Portfolio Modals ------------------------------------------------------------->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -561,7 +564,7 @@ They we getting nervous when Darius said “yes!” <br><br> *** </p>
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://startbootstrap.com"></a>
                                     </strong>
                                 </li>
                                 <li>Date:
